--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="shortcut icon" href="img/favicon.jpg">
 
-	<div id="sfcprp3gza7s9bnkw6df99dlcm2kk7yfmuz"></div><script type="text/javascript" src="https://counter7.wheredoyoucomefrom.ovh/private/counter.js?c=prp3gza7s9bnkw6df99dlcm2kk7yfmuz&down=async" async></script><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas com"><img src="https://counter7.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=prp3gza7s9bnkw6df99dlcm2kk7yfmuz" border="0" title="contador de visitas com" alt="contador de visitas com"></a></noscript>
+	<center><a href="https://www.cerotec.net/estadisticas-127289/wilsoncarvajal1999.github.io" title="Contador de visitas gratis"><img src="https://www.cerotec.net/contador.php?t=1&s=2&i=127289" alt="www.cerotec.net"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' >cerotec</a></center>
 	<style type="text/css">
 	.video-responsive {
 position: relative;
