--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 	<link rel="shortcut icon" href="img/favicon.jpg">
 
-	<center><a href="https://www.cerotec.net/estadisticas-127289/wilsoncarvajal1999.github.io" title="Contador de visitas gratis"><img src="https://www.cerotec.net/contador.php?t=1&s=2&i=127289" alt="www.cerotec.net"></a> <br><a href='https://www.cerotec.net' style='font-size:12px;' >cerotec</a></center>
-	<style type="text/css">
+<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=https://wilsoncarvajal1999.github.io/OVI-MYSQL-Y-PHP-/index.html&digit=style/plain/7/&reloads=0" alt="reliablecounter.com" title="reliablecounter.com" border="0"></a><br /><a href="http://relia" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">reliablecounter.com</a>	<style type="text/css">
 	.video-responsive {
 position: relative;
 padding-bottom: 56.25%; /* 16/9 ratio */
