--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
 	<link rel="shortcut icon" href="img/favicon.jpg">
 
-<a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=https://wilsoncarvajal1999.github.io/OVI-MYSQL-Y-PHP-/index.html&digit=style/plain/7/&reloads=0" alt="reliablecounter.com" title="reliablecounter.com" border="0"></a><br /><a href="http://relia" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">reliablecounter.com</a>	<style type="text/css">
+<!-- Start of CuterCounter Code -->
+<a href="https://www.cutercounter.com/spanish/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=gvupqnqc&nd=7&style=50" border="0" alt="contador web"></a>
+<!-- End of CuterCounter Code -->						 
+						 
+						
 	.video-responsive {
 position: relative;
 padding-bottom: 56.25%; /* 16/9 ratio */
