--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <a href="https://www.cutercounter.com/spanish/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=gvupqnqc&nd=7&style=50" border="0" alt="contador web"></a>
 <!-- End of CuterCounter Code -->						 
 						 
-	<stlyle>					
+	<style type="text/css">					
 	.video-responsive {
 position: relative;
 padding-bottom: 56.25%; /* 16/9 ratio */
